Prevent mpai-Details_Value from word-wrapping

--- a/resources/assets/styles/components/_mpai-AvatarIsland.scss
+++ b/resources/assets/styles/components/_mpai-AvatarIsland.scss
@@ -112,4 +112,5 @@
   padding: 5px;
   text-align: center;
   overflow: auto;
+  white-space: nowrap;
 }
